Bug 340412 - Wheel event not forwarded inside dialog
Summary: Wheel event not forwarded inside dialog
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasmaquick (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-27 22:31 UTC by Kai Uwe Broulik
Modified: 2014-10-30 21:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2014-10-27 22:31:51 UTC
With always-on dialog margins mouse clicks and other mouse events are translated into the item so they still work on screen edges. This is not the case with wheel events.

Reproducible: Always

Steps to Reproduce:
1. Hover kmix or battery in systray
2. Move cursor all the way to the screen corner
3. Mouse wheel

Actual Results:  
Nothing happens

Expected Results:  
Wheel event is propagated to the item, allowing to adjust volume or brightness even at screen corner. Clicking the applet works.
Comment 1 Kai Uwe Broulik 2014-10-30 09:29:32 UTC
Git commit 112acf413e1cabebc28b05b6a13088713bfefe8c by Kai Uwe Broulik.
Committed on 30/10/2014 at 09:28.
Pushed by broulik into branch 'master'.

Forward wheel events inside panel view

This makes it also forward wheel events in the same fashion as it does with clicks.
Restores Fitt's law for taskmanager wheeling.
A similar patch for plasma-frameworks dialog is needed as well.
Related: bug 340488
REVIEW: 120894

M  +15   -0    shell/panelview.cpp

http://commits.kde.org/plasma-workspace/112acf413e1cabebc28b05b6a13088713bfefe8c
Comment 2 Kai Uwe Broulik 2014-10-30 21:02:27 UTC
Git commit b5f627352e7c2c740b808689496e418990a57fab by Kai Uwe Broulik.
Committed on 30/10/2014 at 21:01.
Pushed by broulik into branch 'master'.

Forward wheel events inside dialog

This makes it also forward wheel events in the same fashion as it does with clicks.

REVIEW: 120908

M  +15   -0    src/plasmaquick/dialog.cpp

http://commits.kde.org/plasma-framework/b5f627352e7c2c740b808689496e418990a57fab