Forward wheel events inside panel view

This makes it also forward wheel events in the same fashion as it does with clicks.
Restores Fitt's law for taskmanager wheeling.
A similar patch for plasma-frameworks dialog is needed as well.

BUG: 340412
BUG: 340488
REVIEW: 120894